docker/phpfpm-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: phpfpm
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: spookernetes
        component: phpfpm
    spec:
      containers:
      - image: us.gcr.io/spookernetes/php:1
        name: phpfpm
