docker/nginxfaker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxfaker
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: spookernetes
    component: nginxwannabe
  type: ClusterIP
