docker/phpfpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpfpm
  labels:
    app: spookernetes
    component: phpfpm
spec:
  ports:
  - name: phpfpm
    port: 9000
    targetPort: 9000
  selector:
    app: spookernetes
    component: phpfpm
  type: ClusterIP
