docker/nginxfaker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    kubernetes.io/ingress.class: traefik
  name: nginxfaker
spec:
  rules:
  - host: spookernetes
    http:
      paths:
      - backend:
          serviceName: nginxfaker
          servicePort: http
        path: /boo
